--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "valspace",
+  "name": "strathspace",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -44,6 +44,7 @@
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.38.4",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.0.5",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
