--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "@radix-ui/react-tooltip": "^1.1.7",
     "@react-three/drei": "^9.121.3",
     "@react-three/fiber": "^9.0.0-alpha.8",
+    "@types/canvas-confetti": "^1.9.0",
     "@uploadthing/react": "^7.1.5",
     "@vercel/postgres": "^0.10.0",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
