--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@types/pg": "^8.11.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/ws": "^8.5.14",
     "drizzle-kit": "^0.30.2",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
