--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "tsx src/lib/seed.ts"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.7.4",
@@ -72,6 +73,7 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.172.0",
     "uploadthing": "^7.4.4",
+    "uuid": "^11.0.5",
     "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
@@ -81,6 +83,7 @@
     "@types/pg": "^8.11.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.14",
     "drizzle-kit": "^0.30.2",
     "eslint": "^9",
