--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@auth/drizzle-adapter": "^1.7.4",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
+    "@pusher/chatkit-client": "^1.14.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.5",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -61,6 +62,8 @@
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "pg": "^8.13.1",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
