--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "critters": "^0.0.25",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.38.4",
     "embla-carousel-react": "^8.5.2",
