--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@auth/drizzle-adapter": "^1.7.4",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
+    "@neondatabase/serverless": "^0.10.4",
     "@pusher/chatkit-client": "^1.14.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.5",
