--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@upstash/redis": "^1.34.3",
     "@vercel/analytics": "^1.4.1",
     "@vercel/postgres": "^0.10.0",
+    "@vercel/speed-insights": "^1.1.0",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -85,6 +86,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@builder.io/partytown": "^0.10.3",
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/pg": "^8.11.11",
