--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "pg": "^8.13.1",
+    "posthog-js": "^1.215.6",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0",
     "react": "^19.0.0",
