--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.0.5",
     "input-otp": "^1.4.2",
+    "libphonenumber-js": "^1.11.19",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "next-auth": "^5.0.0-beta.25",
