--- a/package.json
+++ b/package.json
@@ -92,7 +92,12 @@
   "devDependencies": {
     "@builder.io/partytown": "^0.10.3",
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@playwright/test": "^1.50.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@types/jest": "^29.5.14",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^20.17.19",
     "@types/pg": "^8.11.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
