--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@radix-ui/react-tooltip": "^1.1.7",
     "@react-three/drei": "^9.121.3",
     "@react-three/fiber": "^9.0.0-alpha.8",
+    "@tanstack/react-table": "^8.21.2",
     "@types/canvas-confetti": "^1.9.0",
     "@uploadthing/react": "^7.1.5",
     "@upstash/redis": "^1.34.3",
@@ -81,6 +82,7 @@
     "recharts": "^2.15.0",
     "sonner": "^1.7.2",
     "swiper": "^11.2.1",
+    "swr": "^2.3.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.172.0",
