--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "next-auth": "^5.0.0-beta.25",
+    "next-safe-action": "^7.10.4",
     "next-themes": "^0.4.4",
     "pg": "^8.13.1",
     "posthog-js": "^1.215.6",
